Add basic README layout and remaining select boxes to html.

--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
 </head>
 <body>
   <div class="container">
-    <h1>Programming Language Survey</h1>
+    <h1>Programming Language Suggester</h1>
 
-    <p>Find which programming language is right for you! Answer each question below:</p>
+    <p>Find which programming language is right for you! Fill out the survey below:</p>
 
     <form>
       <label for="question1">What stage of computer programming are you in?</label>
@@ -34,9 +34,25 @@
       </select>
       <label for="question3">Which element of a website are you first drawn to during your initial visit?</label>
       <select id="question3">
-        <option value="front-end">Visual layout</option>
-        <option value="">User friendly capability</option>
-        <option value="expert">Usefulness and resources</option>
+        <option value="layout">Visual layout</option>
+        <option value="capability">User friendly capability</option>
+        <option value="usefulness">Usefulness and resources</option>
+      </select>
+      <label for="question4">Is math a subject you enjoy learning about? If yes, what kind of math?</label>
+      <select id="question4">
+        <option value="algebra">Algebra</option>
+        <option value="calculus">Calculus</option>
+        <option value="group">Group Theory</option>
+        <option value="category">Category Theory</option>
+      </select>
+      <label for="question5">Which animal would you want to be friends with, if given the chance?</label>
+      <select id="question5">
+        <option value="tiger">Tiger</option>
+        <option value="panda">Panda</option>
+        <option value="wolf">Wolf</option>
+        <option value="orangutan">Orangutan</option>
+        <option value="fox">Fox</option>
+        <option value="giraffe">Giraffe</option>
       </select>
 
       <button type="submit" class="btn">Submit Survey</button>
