--- a/index.html
+++ b/index.html
@@ -48,28 +48,42 @@
       <div class="question4">
         <label for="question4">Is math a subject that interests you? If yes, what kind of math?</label><br>
         <div class="form-check">
-          <label class="yes-input" for="mathresult1">
-          <input class="form-check-input" type="radio" name="mathQuestion" id="mathresult1">
+          <label class="math-yes-input">
+            <input type="radio" name="mathQuestion4" value="yes">
             Yes
           </label>
         </div>
         <div class="form-check">
-          <label class="no-input" for="math-result2">
-          <input class="form-check-input" type="radio" name="mathQuestion" id="mathQuestion2" checked>
+          <label class="math-no-input">
+          <input type="radio" name="mathQuestion4" value="no" checked>
             No
           </label>
         </div>
-<!-- 
-        <select class="form-select" id="question4">
-          <option value="yes">Yes</option>
-          <option value="no">No</option>
-          <option value="algebra">Algebra</option>
-          <option value="calculus">Calculus</option>
-          <option value="group">Group Theory</option>
-          <option value="category">Category Theory</option>
-        </select>
-      </div> -->
-      <!-- Rewrite question4 select to be checkbox form input and within that, put radio buttons if user checks yes -->
+        <div class="form-check">
+          <label class="math-algebra-input">
+            <input type="radio" name="mathQuestion4" value="algebra" disabled>
+              Algebra
+          </label>
+        </div>
+        <div class="form-check">
+          <label class="math-calculus-input">
+            <input type="radio" name="mathQuestion4" value="calculus" disabled>
+              Calculus
+          </label>
+        </div>
+        <div class="form-check">
+          <label class="math-group-input">
+            <input type="radio" name="mathQuestion4" value="group theory" disabled>
+              Group Theory
+          </label>
+        </div>
+        <div class="form-check">
+          <label class="math-category-input">
+          <input type="radio" name="mathQuestion4" value="category theory" disabled>
+            Category Theory
+          </label>
+        </div>
+      </div>
       
       <div class="form-group">
         <label for="question5">Which animal would you want to be friends with, if given the chance?</label><br>
@@ -86,40 +100,44 @@
       <button type="submit" class="btn btn-primary">Submit Survey</button>
     </form>
 
-    <div id="javascript-result" class="result">
-      <h2>JavaScript</h2>
-      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-    </div>
-    <div id="c-sharp-result" class="result">
-      <h2>C#</h2>
-      <p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit, sed quia non numquam eius modi tempora incidunt ut labore et dolore magnam aliquam quaerat voluptatem. Ut enim ad minima veniam, quis nostrum exercitationem ullam corporis suscipit laboriosam, nisi ut aliquid ex ea commodi consequatur? Quis autem vel eum iure reprehenderit qui in ea voluptate velit esse quam nihil molestiae consequatur, vel illum qui dolorem eum fugiat quo voluptas nulla pariatur?</p>
-    </div>
-    <div id="rust-result" class="result">
-      <h2>Rust</h2>
-      <p>At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium voluptatum deleniti atque corrupti quos dolores et quas molestias excepturi sint occaecati cupiditate non provident, similique sunt in culpa qui officia deserunt mollitia animi, id est laborum et dolorum fuga. Et harum quidem rerum facilis est et expedita distinctio. Nam libero tempore, cum soluta nobis est eligendi optio cumque nihil impedit quo minus id quod maxime placeat facere possimus, omnis voluptas assumenda est, omnis dolor repellendus. Temporibus autem quibusdam et aut officiis debitis aut rerum necessitatibus saepe eveniet ut et voluptates repudiandae sint et molestiae non recusandae. Itaque earum rerum hic tenetur a sapiente delectus, ut aut reiciendis voluptatibus maiores alias consequatur aut perferendis doloribus asperiores repellat.</p>
-    </div>
-    <div id="haskell-result" class="result">
-      <h2>Haskell</h2>
-      <p>Ut consequat semper viverra nam libero. Augue eget arcu dictum varius duis at consectetur lorem donec. Vitae tortor condimentum lacinia quis vel. Mauris sit amet massa vitae tortor. Pharetra magna ac placerat vestibulum lectus mauris. Purus sit amet luctus venenatis lectus. Vitae congue mauris rhoncus aenean vel elit scelerisque. Est lorem ipsum dolor sit amet consectetur adipiscing elit pellentesque. Rhoncus est pellentesque elit ullamcorper dignissim cras tincidunt lobortis. Enim ut tellus elementum sagittis vitae et leo duis. Lorem ipsum dolor sit amet consectetur adipiscing elit duis tristique. Nunc sed augue lacus viverra. Ultrices dui sapien eget mi proin sed. Diam in arcu cursus euismod. Aliquet lectus proin nibh nisl condimentum id venenatis a. Eu feugiat pretium nibh ipsum consequat nisl vel pretium.</p>
+    <div id="computer-programming-result">
+      <div id="javascript-result">
+        <h2>JavaScript</h2>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+      </div>
+      <div id="c-sharp-result">
+        <h2>C#</h2>
+        <p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit, sed quia non numquam eius modi tempora incidunt ut labore et dolore magnam aliquam quaerat voluptatem. Ut enim ad minima veniam, quis nostrum exercitationem ullam corporis suscipit laboriosam, nisi ut aliquid ex ea commodi consequatur? Quis autem vel eum iure reprehenderit qui in ea voluptate velit esse quam nihil molestiae consequatur, vel illum qui dolorem eum fugiat quo voluptas nulla pariatur?</p>
+      </div>
+      <div id="rust-result">
+        <h2>Rust</h2>
+        <p>At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium voluptatum deleniti atque corrupti quos dolores et quas molestias excepturi sint occaecati cupiditate non provident, similique sunt in culpa qui officia deserunt mollitia animi, id est laborum et dolorum fuga. Et harum quidem rerum facilis est et expedita distinctio. Nam libero tempore, cum soluta nobis est eligendi optio cumque nihil impedit quo minus id quod maxime placeat facere possimus, omnis voluptas assumenda est, omnis dolor repellendus. Temporibus autem quibusdam et aut officiis debitis aut rerum necessitatibus saepe eveniet ut et voluptates repudiandae sint et molestiae non recusandae. Itaque earum rerum hic tenetur a sapiente delectus, ut aut reiciendis voluptatibus maiores alias consequatur aut perferendis doloribus asperiores repellat.</p>
+      </div>
+      <div id="haskell-result">
+        <h2>Haskell</h2>
+        <p>Ut consequat semper viverra nam libero. Augue eget arcu dictum varius duis at consectetur lorem donec. Vitae tortor condimentum lacinia quis vel. Mauris sit amet massa vitae tortor. Pharetra magna ac placerat vestibulum lectus mauris. Purus sit amet luctus venenatis lectus. Vitae congue mauris rhoncus aenean vel elit scelerisque. Est lorem ipsum dolor sit amet consectetur adipiscing elit pellentesque. Rhoncus est pellentesque elit ullamcorper dignissim cras tincidunt lobortis. Enim ut tellus elementum sagittis vitae et leo duis. Lorem ipsum dolor sit amet consectetur adipiscing elit duis tristique. Nunc sed augue lacus viverra. Ultrices dui sapien eget mi proin sed. Diam in arcu cursus euismod. Aliquet lectus proin nibh nisl condimentum id venenatis a. Eu feugiat pretium nibh ipsum consequat nisl vel pretium.</p>
+      </div>
     </div>
 
-    <div id="tiger">
-      <img >
-    </div>
-    <div id="panda">
-      <img >
-    </div>
-    <div id="wolf">
-      <img >
-    </div>
-    <div id="orangutan">
-      <img >
-    </div>
-    <div id="fox">
-      <img >
-    </div>
-    <div id="giraffe">
-      <img >
+    <div id="animal-result">
+      <div id="tiger">
+        <img >
+      </div>
+      <div id="panda">
+        <img >
+      </div>
+      <div id="wolf">
+        <img >
+      </div>
+      <div id="orangutan">
+        <img >
+      </div>
+      <div id="fox">
+        <img >
+      </div>
+      <div id="giraffe">
+        <img >
+      </div>
     </div>
   </div>
 
