--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
           <option value="expert">Expert</option>
         </select>
       </div>
+
       <div class="form-group">
         <label for="question-input2">Out of these options, which computer programming work interests you the most? (select an option to see more information)</label><br>
         <select class="form-select" id="question-input2">
@@ -36,6 +37,7 @@
           <option value="systems">Systems Level Programming</option>
         </select>
       </div>
+
       <div class="form-group">
         <label for="question-input3">Which element of a website are you first drawn to during your initial visit?</label><br>
         <select class="form-select" id="question-input3">
@@ -46,40 +48,40 @@
       </div>
 
       <div class="form-group">
-        <label for="question4">Is math a subject that interests you? If yes, what kind of math?</label><br>
+        <label for="question-input4">Is math a subject that interests you? If yes, what kind of math?</label><br>
         <div class="form-check">
           <label class="math-yes-input">
-            <input type="radio" name="mathQuestion4" value="yes">
+            <input type="radio" name="mathQuestionInitial" value="yes">
             Yes
           </label>
           <div class="form-check1">
             <label class="math-algebra-input">
-              <input type="radio" name="mathQuestion4" value="algebra" disabled>
+              <input type="radio" name="mathQuestionSecondary" value="algebra" disabled>
               Algebra
             </label>
           </div>
           <div class="form-check1">
             <label class="math-calculus-input">
-              <input type="radio" name="mathQuestion4" value="calculus" disabled>
+              <input type="radio" name="mathQuestionSecondary" value="calculus" disabled>
               Calculus
             </label>
           </div>
           <div class="form-check1">
             <label class="math-group-input">
-              <input type="radio" name="mathQuestion4" value="group theory" disabled>
+              <input type="radio" name="mathQuestionSecondary" value="group theory" disabled>
               Group Theory
             </label>
           </div>
           <div class="form-check1">
             <label class="math-category-input">
-              <input type="radio" name="mathQuestion4" value="category theory" disabled>
+              <input type="radio" name="mathQuestionSecondary" value="category theory" disabled>
               Category Theory
             </label>
           </div>
         </div>
         <div class="form-check">
           <label class="math-no-input">
-            <input type="radio" name="mathQuestion4" value="no" checked>
+            <input type="radio" name="mathQuestionInitial" value="no" checked>
             No
           </label>
         </div>
