Add branching for Javascript result in js.

--- a/index.html
+++ b/index.html
@@ -32,11 +32,13 @@
         <select class="form-select" id="question-input2">
           <option value="website">Website Design</option>
           <option value="video-game">Video Game Developer</option>
-          <option value="mobile-app">Mobile App Developer</option>
-          <option value="devOps">DevOps</option>
+          <option value="mobile">Mobile App Developer</option>
+          <option value="dev-ops">DevOps</option>
           <option value="systems">Systems Level Programming</option>
         </select>
       </div>
+
+      <!-- Create pop up dialogue with programming work information after user checks one of the options in Question 2. -->
 
       <div class="form-group">
         <label for="question-input3">Which element of a website are you first drawn to during your initial visit?</label><br>
@@ -103,6 +105,10 @@
     </form>
 
     <div id="programming-result">
+      <div id="bash-result">
+        <h2>Bash</h2>
+        <p>Egestas egestas fringilla phasellus faucibus scelerisque eleifend donec pretium. Mauris cursus mattis molestie a iaculis. Nisl pretium fusce id velit ut tortor pretium viverra. Tortor aliquam nulla facilisi cras fermentum odio. Gravida cum sociis natoque penatibus et magnis dis parturient. Amet commodo nulla facilisi nullam vehicula ipsum. Donec ac odio tempor orci dapibus ultrices in. Euismod in pellentesque massa placerat duis ultricies lacus sed turpis. Cras sed felis eget velit aliquet sagittis id consectetur. Enim diam vulputate ut pharetra sit amet aliquam id diam. Arcu risus quis varius quam quisque id diam. Nunc sed id semper risus in hendrerit. Quis auctor elit sed vulputate mi sit amet mauris commodo. Viverra orci sagittis eu volutpat odio facilisis. Nunc aliquet bibendum enim facilisis gravida neque convallis a cras. Aliquam faucibus purus in massa tempor. Porta non pulvinar neque laoreet.</p>
+      </div>
       <div id="javascript-result">
         <h2>JavaScript</h2>
         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
