Update radio label layout. Add radio function.

--- a/index.html
+++ b/index.html
@@ -52,45 +52,45 @@
       <div class="form-group">
         <label for="question-input4">Is math a subject that interests you? If yes, what kind of math?</label><br>
         <div class="form-check">
-          <label class="math-yes-input">
-            <input type="radio" name="mathQuestionInitial" value="yes">
+          <label>
+            <input type="radio" name="mathFirst" class="mathFirst" value="yes">
             Yes
           </label>
           <div class="form-check1">
-            <label class="math-algebra-input">
-              <input type="radio" name="mathQuestionSecondary" value="algebra" disabled>
+            <label>
+              <input type="radio" name="mathSecond" class="mathSecond" value="algebra">
               Algebra
             </label>
           </div>
           <div class="form-check1">
-            <label class="math-calculus-input">
-              <input type="radio" name="mathQuestionSecondary" value="calculus" disabled>
+            <label>
+              <input type="radio" name="mathSecond" class="mathSecond" value="calculus">
               Calculus
             </label>
           </div>
           <div class="form-check1">
-            <label class="math-group-input">
-              <input type="radio" name="mathQuestionSecondary" value="group theory" disabled>
+            <label>
+              <input type="radio" name="mathSecond"  class="mathSecond" value="group theory">
               Group Theory
             </label>
           </div>
           <div class="form-check1">
-            <label class="math-category-input">
-              <input type="radio" name="mathQuestionSecondary" value="category theory" disabled>
+            <label>
+              <input type="radio" name="mathSecond" class="mathSecond" value="category theory">
               Category Theory
             </label>
           </div>
         </div>
         <div class="form-check">
-          <label class="math-no-input">
-            <input type="radio" name="mathQuestionInitial" value="no" checked>
+          <label>
+            <input type="radio" name="mathFirst" class="mathFirst" value="no" checked>
             No
           </label>
         </div>
       </div>
       
       <div class="form-group">
-        <label for="question5">Which animal would you want to be friends with, if given the chance?</label><br>
+        <label for="question-input5">Which animal would you want to be friends with, if given the chance?</label><br>
         <select class="form-select" id="question5">
           <option value="tiger">Tiger</option>
           <option value="panda">Panda</option>
