--- a/index.html
+++ b/index.html
@@ -43,8 +43,8 @@
       <div class="form-group">
         <label for="question-input3">Which element of a website are you first drawn to during your initial visit?</label><br>
         <select class="form-select" id="question-input3">
-          <option value="layout">Visual layout</option>
-          <option value="capability">User friendly capability</option>
+          <option value="visual">Visual layout</option>
+          <option value="user-friendly">User friendly capability</option>
           <option value="usefulness">Usefulness and resources</option>
         </select>
       </div>
@@ -104,27 +104,26 @@
       <button type="submit" class="btn btn-primary">Submit Survey</button>
     </form>
 
-    <div id="programming-result">
-      <div id="bash-result">
-        <h2>Bash</h2>
-        <p>Egestas egestas fringilla phasellus faucibus scelerisque eleifend donec pretium. Mauris cursus mattis molestie a iaculis. Nisl pretium fusce id velit ut tortor pretium viverra. Tortor aliquam nulla facilisi cras fermentum odio. Gravida cum sociis natoque penatibus et magnis dis parturient. Amet commodo nulla facilisi nullam vehicula ipsum. Donec ac odio tempor orci dapibus ultrices in. Euismod in pellentesque massa placerat duis ultricies lacus sed turpis. Cras sed felis eget velit aliquet sagittis id consectetur. Enim diam vulputate ut pharetra sit amet aliquam id diam. Arcu risus quis varius quam quisque id diam. Nunc sed id semper risus in hendrerit. Quis auctor elit sed vulputate mi sit amet mauris commodo. Viverra orci sagittis eu volutpat odio facilisis. Nunc aliquet bibendum enim facilisis gravida neque convallis a cras. Aliquam faucibus purus in massa tempor. Porta non pulvinar neque laoreet.</p>
-      </div>
-      <div id="javascript-result">
-        <h2>JavaScript</h2>
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-      </div>
-      <div id="c-sharp-result">
-        <h2>C#</h2>
-        <p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit, sed quia non numquam eius modi tempora incidunt ut labore et dolore magnam aliquam quaerat voluptatem. Ut enim ad minima veniam, quis nostrum exercitationem ullam corporis suscipit laboriosam, nisi ut aliquid ex ea commodi consequatur? Quis autem vel eum iure reprehenderit qui in ea voluptate velit esse quam nihil molestiae consequatur, vel illum qui dolorem eum fugiat quo voluptas nulla pariatur?</p>
-      </div>
-      <div id="rust-result">
-        <h2>Rust</h2>
-        <p>At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium voluptatum deleniti atque corrupti quos dolores et quas molestias excepturi sint occaecati cupiditate non provident, similique sunt in culpa qui officia deserunt mollitia animi, id est laborum et dolorum fuga. Et harum quidem rerum facilis est et expedita distinctio. Nam libero tempore, cum soluta nobis est eligendi optio cumque nihil impedit quo minus id quod maxime placeat facere possimus, omnis voluptas assumenda est, omnis dolor repellendus. Temporibus autem quibusdam et aut officiis debitis aut rerum necessitatibus saepe eveniet ut et voluptates repudiandae sint et molestiae non recusandae. Itaque earum rerum hic tenetur a sapiente delectus, ut aut reiciendis voluptatibus maiores alias consequatur aut perferendis doloribus asperiores repellat.</p>
-      </div>
-      <div id="haskell-result">
-        <h2>Haskell</h2>
-        <p>Ut consequat semper viverra nam libero. Augue eget arcu dictum varius duis at consectetur lorem donec. Vitae tortor condimentum lacinia quis vel. Mauris sit amet massa vitae tortor. Pharetra magna ac placerat vestibulum lectus mauris. Purus sit amet luctus venenatis lectus. Vitae congue mauris rhoncus aenean vel elit scelerisque. Est lorem ipsum dolor sit amet consectetur adipiscing elit pellentesque. Rhoncus est pellentesque elit ullamcorper dignissim cras tincidunt lobortis. Enim ut tellus elementum sagittis vitae et leo duis. Lorem ipsum dolor sit amet consectetur adipiscing elit duis tristique. Nunc sed augue lacus viverra. Ultrices dui sapien eget mi proin sed. Diam in arcu cursus euismod. Aliquet lectus proin nibh nisl condimentum id venenatis a. Eu feugiat pretium nibh ipsum consequat nisl vel pretium.</p>
-      </div>
+    <h3>Congratulations! You are most compatible with:</h3>
+    <div class="programming-result" id="bash-result">
+      <h2 id="bash">Bash</h2>
+      <p>Egestas egestas fringilla phasellus faucibus scelerisque eleifend donec pretium. Mauris cursus mattis molestie a iaculis. Nisl pretium fusce id velit ut tortor pretium viverra. Tortor aliquam nulla facilisi cras fermentum odio. Gravida cum sociis natoque penatibus et magnis dis parturient. Amet commodo nulla facilisi nullam vehicula ipsum. Donec ac odio tempor orci dapibus ultrices in. Euismod in pellentesque massa placerat duis ultricies lacus sed turpis. Cras sed felis eget velit aliquet sagittis id consectetur. Enim diam vulputate ut pharetra sit amet aliquam id diam. Arcu risus quis varius quam quisque id diam. Nunc sed id semper risus in hendrerit. Quis auctor elit sed vulputate mi sit amet mauris commodo. Viverra orci sagittis eu volutpat odio facilisis. Nunc aliquet bibendum enim facilisis gravida neque convallis a cras. Aliquam faucibus purus in massa tempor. Porta non pulvinar neque laoreet.</p>
+    </div>
+    <div class="programming-result" id="javascript-result">
+      <h2 id="javascript">JavaScript</h2>
+      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+    </div>
+    <div class="programming-result" id="c-sharp-result">
+      <h2 id="cSharp">C#</h2>
+      <p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit, sed quia non numquam eius modi tempora incidunt ut labore et dolore magnam aliquam quaerat voluptatem. Ut enim ad minima veniam, quis nostrum exercitationem ullam corporis suscipit laboriosam, nisi ut aliquid ex ea commodi consequatur? Quis autem vel eum iure reprehenderit qui in ea voluptate velit esse quam nihil molestiae consequatur, vel illum qui dolorem eum fugiat quo voluptas nulla pariatur?</p>
+    </div>
+    <div class="programming-result" id="rust-result">
+      <h2 id="rust">Rust</h2>
+      <p>At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium voluptatum deleniti atque corrupti quos dolores et quas molestias excepturi sint occaecati cupiditate non provident, similique sunt in culpa qui officia deserunt mollitia animi, id est laborum et dolorum fuga. Et harum quidem rerum facilis est et expedita distinctio. Nam libero tempore, cum soluta nobis est eligendi optio cumque nihil impedit quo minus id quod maxime placeat facere possimus, omnis voluptas assumenda est, omnis dolor repellendus. Temporibus autem quibusdam et aut officiis debitis aut rerum necessitatibus saepe eveniet ut et voluptates repudiandae sint et molestiae non recusandae. Itaque earum rerum hic tenetur a sapiente delectus, ut aut reiciendis voluptatibus maiores alias consequatur aut perferendis doloribus asperiores repellat.</p>
+    </div>
+    <div class="programming-result" id="haskell-result">
+      <h2 id="haskell">Haskell</h2>
+      <p>Ut consequat semper viverra nam libero. Augue eget arcu dictum varius duis at consectetur lorem donec. Vitae tortor condimentum lacinia quis vel. Mauris sit amet massa vitae tortor. Pharetra magna ac placerat vestibulum lectus mauris. Purus sit amet luctus venenatis lectus. Vitae congue mauris rhoncus aenean vel elit scelerisque. Est lorem ipsum dolor sit amet consectetur adipiscing elit pellentesque. Rhoncus est pellentesque elit ullamcorper dignissim cras tincidunt lobortis. Enim ut tellus elementum sagittis vitae et leo duis. Lorem ipsum dolor sit amet consectetur adipiscing elit duis tristique. Nunc sed augue lacus viverra. Ultrices dui sapien eget mi proin sed. Diam in arcu cursus euismod. Aliquet lectus proin nibh nisl condimentum id venenatis a. Eu feugiat pretium nibh ipsum consequat nisl vel pretium.</p>
     </div>
 
     <div id="animal-result">
