Add h3 to submit function and blank as input option.

--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
       <div class="form-group">
         <label for="question-input1">What stage of computer programming are you in?</label><br>
         <select class="form-select" id="question-input1">
+          <option value="blank"></option>
           <option value="beginner">Beginner</option>
           <option value="intermediate">Intermediate</option>
           <option value="advanced">Advanced</option>
@@ -30,6 +31,7 @@
       <div class="form-group">
         <label for="question-input2">Out of these options, which computer programming work interests you the most? (select an option to see more information)</label><br>
         <select class="form-select" id="question-input2">
+          <option value="blank"></option>
           <option value="website">Website Design</option>
           <option value="video-game">Video Game Developer</option>
           <option value="mobile">Mobile App Developer</option>
@@ -43,6 +45,7 @@
       <div class="form-group">
         <label for="question-input3">Which element of a website are you first drawn to during your initial visit?</label><br>
         <select class="form-select" id="question-input3">
+          <option value="blank"></option>
           <option value="visual">Visual layout</option>
           <option value="user-friendly">User friendly capability</option>
           <option value="usefulness">Usefulness and resources</option>
@@ -92,6 +95,7 @@
       <div class="form-group">
         <label for="question-input5">Which animal would you want to be friends with, if given the chance?</label><br>
         <select class="form-select" id="question5">
+          <option value="blank"></option>
           <option value="tiger">Tiger</option>
           <option value="panda">Panda</option>
           <option value="wolf">Wolf</option>
@@ -104,7 +108,7 @@
       <button type="submit" class="btn btn-primary">Submit Survey</button>
     </form>
 
-    <h3>Congratulations! You are most compatible with:</h3>
+    <h3 id="end-message">Congratulations! You are most compatible with:</h3>
     <div class="programming-result" id="bash-result">
       <h2 id="bash">Bash</h2>
       <p>Egestas egestas fringilla phasellus faucibus scelerisque eleifend donec pretium. Mauris cursus mattis molestie a iaculis. Nisl pretium fusce id velit ut tortor pretium viverra. Tortor aliquam nulla facilisi cras fermentum odio. Gravida cum sociis natoque penatibus et magnis dis parturient. Amet commodo nulla facilisi nullam vehicula ipsum. Donec ac odio tempor orci dapibus ultrices in. Euismod in pellentesque massa placerat duis ultricies lacus sed turpis. Cras sed felis eget velit aliquet sagittis id consectetur. Enim diam vulputate ut pharetra sit amet aliquam id diam. Arcu risus quis varius quam quisque id diam. Nunc sed id semper risus in hendrerit. Quis auctor elit sed vulputate mi sit amet mauris commodo. Viverra orci sagittis eu volutpat odio facilisis. Nunc aliquet bibendum enim facilisis gravida neque convallis a cras. Aliquam faucibus purus in massa tempor. Porta non pulvinar neque laoreet.</p>
