Add css styling to html elements.

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <div class="container">
     <h1>Programming Language Suggester</h1>
 
-    <p>Find which programming language is right for you! Fill out the survey below:</p>
+    <p><strong>Find which programming language is right for you! Fill out the survey below:</strong></p>
 
     <form id="user-input">
       <div class="form-group">
@@ -105,7 +105,7 @@
         </select>
       </div>
 
-      <button type="submit" class="btn btn-primary">Submit Survey</button>
+      <button type="submit" class="btn btn-secondary">Submit Survey</button>
     </form>
 
     <h3 id="end-message">Congratulations! You are most compatible with:</h3>
